--- a/simple-chat/src/index.css
+++ b/simple-chat/src/index.css
@@ -26,7 +26,7 @@ body {
 
 .message {
     color: red;
-    /* border: 1px solid; */
+    border: 1px solid;
     border-radius: 4px;
     margin: 4px 0;
     padding: 4px;
