--- a/simple-chat/src/index.css
+++ b/simple-chat/src/index.css
@@ -20,12 +20,14 @@ body {
 
 .form {
     width: 100%;
+    min-height: 100vh;
     display: inline-block;
-    border: 1px solid rgba(25, 25, 25, 0.32);
     padding-bottom: 60px;
 }
 
 .messages {
+    display: flex;
+    justify-content: right;
     overflow: auto;
     margin-bottom: 10px;
 }
