--- a/simple-chat/src/index.css
+++ b/simple-chat/src/index.css
@@ -18,50 +18,88 @@ body {
     line-height: 20px;
 }
 
-.form {
+.header {
     width: 100%;
-    min-height: 100vh;
-    display: inline-block;
-    padding-bottom: 60px;
-}
-
-.messages {
+    position: fixed;
+    top: 0;
     display: flex;
-    justify-content: right;
-    overflow: auto;
-    margin-bottom: 10px;
-}
-
-.message {
-    color: red;
-    border: 1px solid;
-    border-radius: 4px;
-    margin: 4px 0;
-    padding: 4px;
-}
-
-.message-input-container {
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-}
-
-.name-input-container {
-    width: 100%;
-    position: fixed;
-    bottom: 42px;
-}
-
-input[type=submit] {
-    visibility: collapse;
-}
-
-.message-input {
-    width: calc(100% - 2px);
+    align-items: center;
+    background-color: purple;
+    color: white;
     padding: 10px;
 }
 
-.name-input {
-    width: calc(100% - 2px);
-    padding: 5px;
+.avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.header-text {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.name {
+    font-weight: bold;
+}
+
+.status {
+    font-size: 12px;
+    color: #ccc;
+}
+
+.form {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding-top: 60px;
+    padding-bottom: 50px;
+}
+
+.messages {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    overflow: auto;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
+.message {
+    background-color: #F3E5F5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin: 4px 0;
+    padding: 10px;
+    max-width: 40%;
+    align-self: flex-end;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+
+.message-input-container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    background-color: #fff;
+    padding: 10px;
+    border-top: 1px solid #ccc;
+}
+
+.message-input {
+    width: calc(100% - 40px);
+    padding: 10px;
+    border: 0;
+}
+
+.material-symbols-outlined {
+    margin-right: 10px;
+    margin-left: 10px;
 }
