--- a/simple-chat/src/components/chat-list/chat.css
+++ b/simple-chat/src/components/chat-list/chat.css
@@ -6,6 +6,11 @@
     cursor: pointer;
 }
 
+.chat-link {
+    text-decoration: none;
+    color: inherit;
+}
+
 .avatar {
     width: 40px;
     height: 40px;
