--- a/simple-chat/src/components/chat-list/chat.css
+++ b/simple-chat/src/components/chat-list/chat.css
@@ -6,6 +6,11 @@
     cursor: pointer;
 }
 
+.chat:hover {
+    transition: background-color 0.5s;
+    background-color: #EBEBEB;
+}
+
 .chat-link {
     text-decoration: none;
     color: inherit;
