--- a/simple-chat/src/components/chat-list/createChatButton.css
+++ b/simple-chat/src/components/chat-list/createChatButton.css
@@ -15,6 +15,23 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
+.create-chat-button:hover {
+    background-color: #D7B448;
+    animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
+    }
+    70% {
+        box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
+    }
+    100% {
+        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    }
+}
+
 .create-chat-button .material-symbols-outlined {
     font-size: 24px;
     color: #756124;
