--- a/simple-chat/src/components/chat/chatScreen.css
+++ b/simple-chat/src/components/chat/chatScreen.css
@@ -15,7 +15,8 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     margin-bottom: 10px;
     margin-right: 5px;
     margin-left: 5px;
@@ -41,6 +42,16 @@
     background-color: #EBEBEB;
 }
 
+.my-message.new-message {
+    opacity: 0;
+    animation: slideInRight 0.5s forwards;
+}
+
+.interlocutor-message.new-message {
+    opacity: 0;
+    animation: slideInLeft 0.5s forwards;
+}
+
 .message-input-container {
     display: flex;
     align-items: center;
@@ -61,4 +72,26 @@
 .material-symbols-outlined {
     margin-right: 10px;
     margin-left: 10px;
+}
+
+@keyframes slideInRight {
+    from {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideInLeft {
+    from {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
