--- a/chatList.style.css
+++ b/chatList.style.css
@@ -50,6 +50,11 @@ body {
     cursor: pointer;
 }
 
+.chat:hover {
+    transition: background-color 0.5s;
+    background-color: #EBEBEB;
+}
+
 .chat-link {
     text-decoration: none;
     color: inherit;
@@ -117,6 +122,23 @@ body {
     justify-content: center;
     cursor: pointer;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.create-chat-button:hover {
+    background-color: #D7B448;
+    animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
+    }
+    70% {
+        box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
+    }
+    100% {
+        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    }
 }
 
 .create-chat-button .material-symbols-outlined {
