hw4: добавил кнопку отправки сообщения

--- a/simple-chat/src/components/chat/chatScreen.css
+++ b/simple-chat/src/components/chat/chatScreen.css
@@ -74,6 +74,12 @@
     margin-left: 10px;
 }
 
+.send-button {
+    color: purple;
+    font-size: 24px;
+    cursor: pointer;
+}
+
 @keyframes slideInRight {
     from {
         transform: translateX(100%);
