--- a/simple-chat/src/components/chat/header.css
+++ b/simple-chat/src/components/chat/header.css
@@ -25,10 +25,14 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    overflow: hidden;
 }
 
 .name {
     font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .status {
