deploy: d5a379ce2ad46e180011932901b9677c19a811c0

--- a/chat.style.css
+++ b/chat.style.css
@@ -45,10 +45,14 @@ body {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    overflow: hidden;
 }
 
 .name {
     font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .status {
