--- a/chatList.style.css
+++ b/chatList.style.css
@@ -69,24 +69,32 @@ body {
 
 .chat-info {
     flex-grow: 1;
+    overflow: hidden;
 }
 
 .chat-title {
     font-size: 16px;
     font-weight: bold;
     margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .chat-last-message {
     font-size: 14px;
     color: #666;
     margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .chat-meta {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    min-width: 115px;
 }
 
 .last-message-time {
