--- a/chatList.style.css
+++ b/chatList.style.css
@@ -50,6 +50,11 @@ body {
     cursor: pointer;
 }
 
+.chat:hover {
+    transition: background-color 0.5s;
+    background-color: #EBEBEB;
+}
+
 .chat-link {
     text-decoration: none;
     color: inherit;
@@ -64,24 +69,32 @@ body {
 
 .chat-info {
     flex-grow: 1;
+    overflow: hidden;
 }
 
 .chat-title {
     font-size: 16px;
     font-weight: bold;
     margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .chat-last-message {
     font-size: 14px;
     color: #666;
     margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .chat-meta {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    min-width: 115px;
 }
 
 .last-message-time {
@@ -117,6 +130,23 @@ body {
     justify-content: center;
     cursor: pointer;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.create-chat-button:hover {
+    background-color: #D7B448;
+    animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
+    }
+    70% {
+        box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
+    }
+    100% {
+        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    }
 }
 
 .create-chat-button .material-symbols-outlined {
