--- a/simple-chat/src/components/chat-list/header.css
+++ b/simple-chat/src/components/chat-list/header.css
@@ -13,6 +13,8 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .name {
@@ -20,6 +22,27 @@
 }
 
 .material-symbols-outlined {
-    margin-right: 10px;
-    margin-left: 10px;
+    padding: 8px;
+}
+
+.search-button {
+    border-radius: 50%;
+}
+
+.header-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    text-decoration: none;
+    color: inherit;
+}
+
+.header-button:hover {
+    transition: background-color 0.5s;
+    background-color: #56076a;
 }
