--- a/simple-chat/src/components/chat/header.css
+++ b/simple-chat/src/components/chat/header.css
@@ -12,8 +12,9 @@
 .avatar {
     width: 40px;
     height: 40px;
+    margin-left: 5px;
+    margin-right: 5px;
     border-radius: 50%;
-    margin-right: 10px;
 }
 
 .avatar:hover {
@@ -26,6 +27,8 @@
     flex-direction: column;
     flex-grow: 1;
     overflow: hidden;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .name {
@@ -41,15 +44,16 @@
 }
 
 .material-symbols-outlined {
-    margin-right: 10px;
-    margin-left: 10px;
+    padding: 8px;
 }
 
-.back-to-chat-list-link {
+.header-button {
+    background: none;
+    border: none;
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 5px;
     height: 40px;
     width: 40px;
     border-radius: 50%;
@@ -57,7 +61,7 @@
     color: inherit;
 }
 
-.back-to-chat-list-link:hover {
+.header-button:hover {
     transition: background-color 0.5s;
     background-color: #56076a;
 }
