--- a/chat.style.css
+++ b/chat.style.css
@@ -32,8 +32,9 @@ body {
 .avatar {
     width: 40px;
     height: 40px;
+    margin-left: 5px;
+    margin-right: 5px;
     border-radius: 50%;
-    margin-right: 10px;
 }
 
 .avatar:hover {
@@ -46,6 +47,8 @@ body {
     flex-direction: column;
     flex-grow: 1;
     overflow: hidden;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .name {
@@ -61,15 +64,16 @@ body {
 }
 
 .material-symbols-outlined {
-    margin-right: 10px;
-    margin-left: 10px;
+    padding: 8px;
 }
 
-.back-to-chat-list-link {
+.header-button {
+    background: none;
+    border: none;
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 5px;
     height: 40px;
     width: 40px;
     border-radius: 50%;
@@ -77,7 +81,7 @@ body {
     color: inherit;
 }
 
-.back-to-chat-list-link:hover {
+.header-button:hover {
     transition: background-color 0.5s;
     background-color: #56076a;
 }
@@ -100,9 +104,7 @@ body {
     justify-content: end;
     overflow-y: auto;
     overflow-x: hidden;
-    margin-bottom: 10px;
-    margin-right: 5px;
-    margin-left: 5px;
+    margin: 0 5px 10px;
 }
 
 .message {
@@ -113,6 +115,20 @@ body {
     max-width: 60%;
     word-wrap: break-word;
     overflow-wrap: break-word;
+    display: flex;
+    flex-direction: column;
+}
+
+.message-sender {
+    font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.message-time {
+    align-self: flex-end;
+    font-size: 12px;
 }
 
 .my-message {
@@ -138,6 +154,7 @@ body {
 .message-input-container {
     display: flex;
     align-items: center;
+    justify-content: center;
     width: 100%;
     position: fixed;
     bottom: 0;
@@ -153,14 +170,33 @@ body {
 }
 
 .material-symbols-outlined {
-    margin-right: 10px;
-    margin-left: 10px;
+    padding: 8px;
 }
 
-.send-button {
+.send-button .material-symbols-outlined {
     color: purple;
     font-size: 24px;
+    padding: 0;
+}
+
+.footer-button {
+    background: none;
+    border: none;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    text-decoration: none;
+    color: inherit;
+    margin-left: 3px;
+}
+
+.footer-button:hover {
+    transition: background-color 0.5s;
+    background-color: #EBEBEB;
 }
 
 @keyframes slideInRight {
