--- a/chatList.style.css
+++ b/chatList.style.css
@@ -32,6 +32,8 @@ body {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .name {
@@ -39,8 +41,29 @@ body {
 }
 
 .material-symbols-outlined {
-    margin-right: 10px;
-    margin-left: 10px;
+    padding: 8px;
+}
+
+.search-button {
+    border-radius: 50%;
+}
+
+.header-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    text-decoration: none;
+    color: inherit;
+}
+
+.header-button:hover {
+    transition: background-color 0.5s;
+    background-color: #56076a;
 }
 .chat {
     display: flex;
@@ -107,8 +130,12 @@ body {
     color: green;
 }
 
+.chat .material-symbols-outlined {
+    padding: 0;
+}
+
 .chat-list {
-    margin-top: 40px;
+    margin-top: 60px;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -176,16 +203,41 @@ body {
     max-width: 500px;
 }
 
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.modal-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
+.chat-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.create-button {
+    margin-top: 5px;
+    width: min-content;
+}
+
+.close-button {
+    align-self: flex-start;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: none;
+    border: none;
     cursor: pointer;
+}
+
+.close-button .material-symbols-outlined {
+    color: #aaa;
+}
+
+.close-button:hover,
+.close-button:focus {
+    transition: background-color 0.5s;
+    background-color: #EBEBEB;
 }
