--- a/simple-chat/src/components/chat/header.css
+++ b/simple-chat/src/components/chat/header.css
@@ -2,6 +2,7 @@
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 1;
     display: flex;
     align-items: center;
     background-color: purple;
