--- a/chat.style.css
+++ b/chat.style.css
@@ -22,6 +22,7 @@ body {
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 1;
     display: flex;
     align-items: center;
     background-color: purple;
