hw5: вернул нужные цвета иконкам

--- a/react-chat/src/components/chat-list/createChatButton/createChatButton.scss
+++ b/react-chat/src/components/chat-list/createChatButton/createChatButton.scss
@@ -32,7 +32,6 @@
     }
 }
 
-.create-chat-button .material-symbols-outlined {
-    font-size: 24px;
+.create-chat-button .editIcon {
     color: #756124;
 }
