--- a/react-chat/src/components/chat/chatScreen/chatScreen.scss
+++ b/react-chat/src/components/chat/chatScreen/chatScreen.scss
@@ -82,14 +82,8 @@
     border: 0;
 }
 
-.material-symbols-outlined {
-    padding: 8px;
-}
-
-.send-button .material-symbols-outlined {
+.sendIcon {
     color: purple;
-    font-size: 24px;
-    padding: 0;
 }
 
 .footer-button {
