--- a/react-chat/src/pages/editProfile/editProfilePage.scss
+++ b/react-chat/src/pages/editProfile/editProfilePage.scss
@@ -45,22 +45,36 @@
     border-radius: 50%;
 }
 
-.profile-full-name-input-container {
+.container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    min-width: 250px;
+    background-color: #ededed;
+    padding: 5px;
+    border-radius: 5px;
+    border-bottom: 1px solid #9e9e9e;
 }
 
-.profile-username-input-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+.info-label {
+    color: #9a9a9a;
+    font-size: 14px;
 }
 
-.profile-bio-input-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+.info-input{
+    border: none;
+    background-color: #ededed;
+    font-size: 18px;
+    color: #2a2a2a;
+    padding: 0;
+}
+
+.info-input::placeholder{
+    color: #2a2a2a;
+}
+
+.about {
+    color: #9a9a9a;
+    font-size: 12px;
+    margin-left: 5px;
 }
