hw7: разделил full-name на first-name и last-name (правки из hw6)

--- a/react-chat/src/components/profile/profileInfo/profileInfo.scss
+++ b/react-chat/src/components/profile/profileInfo/profileInfo.scss
@@ -35,7 +35,15 @@
   font-size: 14px;
 }
 
-.profile-full-name {
+.profile-first-name {
+  font-size: 18px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 245px;
+}
+
+.profile-last-name {
   font-size: 18px;
   white-space: nowrap;
   overflow: hidden;
