--- a/react-chat/src/components/chat/chatScreen/chatScreen.scss
+++ b/react-chat/src/components/chat/chatScreen/chatScreen.scss
@@ -67,7 +67,7 @@
 .message-input-container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     width: 100%;
     position: fixed;
     bottom: 0;
@@ -78,12 +78,30 @@
 
 .message-input {
     width: calc(100% - 40px);
+    margin-left: 5px;
+    margin-right: 5px;
     padding: 10px;
     border: 0;
 }
 
+.recording-div {
+    width: calc(100% - 40px);
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 10px;
+    color: #666666;
+}
+
 .sendIcon {
     color: purple;
+}
+
+.micIcon {
+    color: purple;
+}
+
+.stopCircleIcon {
+    color: red;
 }
 
 .footer-button {
@@ -98,7 +116,6 @@
     border-radius: 50%;
     text-decoration: none;
     color: inherit;
-    margin-left: 3px;
 }
 
 .footer-button:hover {
