--- a/react-chat/src/components/chat/chatScreen/chatScreen.scss
+++ b/react-chat/src/components/chat/chatScreen/chatScreen.scss
@@ -92,6 +92,10 @@
     color: #666666;
 }
 
+.recording-buttons {
+    display: flex;
+}
+
 .sendIcon {
     color: purple;
 }
@@ -100,7 +104,7 @@
     color: purple;
 }
 
-.stopCircleIcon {
+.cancelIcon {
     color: red;
 }
 
