--- a/react-chat/src/components/chat/chatScreen/chatScreen.scss
+++ b/react-chat/src/components/chat/chatScreen/chatScreen.scss
@@ -64,13 +64,38 @@
     animation: slideInLeft 0.5s forwards;
 }
 
+.footer {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.dropdown-menu {
+    position: absolute;
+    left: 10px;
+    bottom: 55px;
+    z-index: 2;
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    border-radius: 4px;
+}
+
+.dropdown-item {
+    display: block;
+    padding: 8px 12px;
+    cursor: pointer;
+    color: #333;
+    text-align: left;
+}
+
 .message-input-container {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
     background-color: #fff;
     padding: 10px;
     border-top: 1px solid #ccc;
