--- a/exam/src/App.css
+++ b/exam/src/App.css
@@ -1,8 +1,11 @@
 #root {
-  max-width: 1280px;
+  background-color: #fafafa;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+.App {
+  height: 100vh;
 }
 
 .logo {
