--- a/exam/src/components/Header/Header.css
+++ b/exam/src/components/Header/Header.css
@@ -1,8 +1,9 @@
 .header {
     position: sticky;
+    width: 100%;
+    top: 0;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    align-self: flex-start;
     border-bottom: 1px solid #EBEBEB;
     padding: 15px;
     background-color: #ffffff;
