--- a/exam/src/pages/translate/TranslatePage.css
+++ b/exam/src/pages/translate/TranslatePage.css
@@ -6,19 +6,30 @@
 }
 
 .history-link {
-    align-self: flex-start;
-    margin: 20px;
     color: #3173d0;
+    margin-bottom: 5px;
 }
 
-.history-link-body {
+.history-link-div {
+    align-self: flex-start;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    margin: 10px;
 }
 
 .history-link-label {
     font-size: 14px;
-    text-decoration: none;
-    cursor: pointer;
+    color: #3173d0;
+}
+
+.history-link-icon {
+    border-radius: 50%;
+}
+
+.history-link-icon:hover {
+    background-color: #eaf0fc;
+    box-shadow: #eaf0fc 0 0 0 5px;
+    transition: box-shadow 0.5s;
 }
